# fireflyframework-intellidoc

./: CHANGELOG.md  README.md  install.sh  pyfly.yaml  pyproject.toml
docs/: README.md  api-reference.md  architecture.md  cli.md  configuration.md  deploy.md  examples.md  getting-started.md
examples/: README.md
examples/catalog/: invoice-catalog.yaml
examples/document-types/: financial-types.json  identity-types.json  medical-types.json
examples/schemas/: financial-fields.json  identity-fields.json  invoice-fields.json  medical-fields.json
examples/scripts/: batch-process.sh  classify-and-extract.sh  extract-only.sh
src/fireflyframework_intellidoc/: __init__.py  _version.py  auto_configuration.py  config.py  exceptions.py  main.py  types.py
src/fireflyframework_intellidoc/catalog/: loader.py  service.py
src/fireflyframework_intellidoc/catalog/adapters/: memory.py
src/fireflyframework_intellidoc/catalog/domain/: catalog_field.py  document_type.py  validator_definition.py
src/fireflyframework_intellidoc/catalog/exposure/: document_type_controller.py  field_controller.py  schemas.py  validator_controller.py
src/fireflyframework_intellidoc/catalog/ports/: outbound.py
src/fireflyframework_intellidoc/classification/: models.py  service.py
src/fireflyframework_intellidoc/classification/agents/: document_classifier.py
src/fireflyframework_intellidoc/classification/ports/: outbound.py
src/fireflyframework_intellidoc/cli/: __init__.py  app.py  auto_configuration.py  banner.py  catalog_commands.py  commands.py  output.py  progress.py  shell_adapter.py
src/fireflyframework_intellidoc/extraction/: models.py  service.py
src/fireflyframework_intellidoc/extraction/agents/: field_extractor.py
src/fireflyframework_intellidoc/extraction/ports/: outbound.py
src/fireflyframework_intellidoc/ingestion/: auto_configuration.py  service.py
src/fireflyframework_intellidoc/ingestion/adapters/: azure_blob.py  gcs.py  local.py  s3.py  url.py
src/fireflyframework_intellidoc/ingestion/ports/: outbound.py
src/fireflyframework_intellidoc/observability/: events.py  metrics.py
src/fireflyframework_intellidoc/pipeline/: context.py  orchestrator.py  webhooks.py
src/fireflyframework_intellidoc/pipeline/exposure/: health_controller.py  processing_controller.py
src/fireflyframework_intellidoc/pipeline/steps/: classification_step.py  extraction_step.py  ingestion_step.py  persistence_step.py  preprocessing_step.py  splitting_step.py  validation_step.py
src/fireflyframework_intellidoc/preprocessing/: enhancer.py  models.py  page_extractor.py  quality.py  rotation.py  service.py
src/fireflyframework_intellidoc/preprocessing/ports/: outbound.py
src/fireflyframework_intellidoc/results/: service.py
src/fireflyframework_intellidoc/results/adapters/: memory.py
src/fireflyframework_intellidoc/results/domain/: processing_job.py  processing_result.py
src/fireflyframework_intellidoc/results/exposure/: analytics_controller.py  job_controller.py  result_controller.py  schemas.py
src/fireflyframework_intellidoc/results/ports/: outbound.py
src/fireflyframework_intellidoc/splitting/: models.py  service.py
src/fireflyframework_intellidoc/splitting/ports/: outbound.py
src/fireflyframework_intellidoc/splitting/strategies/: page_based.py  visual.py  whole_document.py
src/fireflyframework_intellidoc/storage/: auto_configuration.py
src/fireflyframework_intellidoc/storage/adapters/: azure_blob.py  gcs.py  local.py  s3.py
src/fireflyframework_intellidoc/storage/ports/: outbound.py
src/fireflyframework_intellidoc/validation/: engine.py  service.py
src/fireflyframework_intellidoc/validation/ports/: outbound.py
src/fireflyframework_intellidoc/validation/validators/: business_rule_validators.py  completeness_validators.py  cross_field_validators.py  format_validators.py  visual_validators.py
